--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -113,4 +113,13 @@
       margin-top: 1em;
       margin-bottom: 0.5em;
       }
+      blockquote {
+        border-left: 10px solid #f6d13b; /* Tailwind blue-500 */
+        padding-left: 1rem;
+        color: #374151; /* Tailwind gray-700 */
+        font-style: italic;
+        background-color: #f3f4f6; /* Tailwind gray-100 */
+        margin: 1em 0;
+        border-radius: 0.25rem;
+      }
   }
